# text-extractor

./: Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yml  entrypoint.sh  f1dce6f9-34d7-4555-b432-a83e419ff75c.jsonl  f1dce6f9-34d7-4555-b432-a83e419ff75c_ocr_pages.jsonl  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
data/: 24c5ab4a-a340-4458-8902-07449b26972b.jsonl  24c5ab4a-a340-4458-8902-07449b26972b_ocr_pages.jsonl  da3cc552-a0e7-4f59-9077-d07a201fe067.jsonl  invoice_1.parquet  oracle_10k_2014_q1_small.parquet
infra/: task-definition.json
src/text_extractor/: .env  .env.localstack  .env.production  aws_clients.py  config.py  metrics_server.py  ocr_client.py  pdf_enqueue_test_ops.py  processor.py  utils.py  worker.py
