[project]
name = "text-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mohammed Ali Bellary", email = "b.mohammedali@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.1.0",
    "aiofiles>=24.1.0",
    "boto3>=1.39.11",
    "botocore>=1.39.11",
    "mistralai>=1.9.10",
    "pandas>=2.3.2",
    "prometheus-client>=0.22.1",
    "pyarrow>=21.0.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "tenacity>=9.1.2",
    "watchtower>=3.4.0",
]

[project.scripts]
worker = "text_extractor.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/text_extractor"]
